--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
     "material-ui": "^0.18.0",
     "mocha": "^2.4.5",
     "phantomjs-prebuilt": "^2.1.4",
-    "react": "^15.0.0",
-    "react-addons-test-utils": "^15.0.0",
-    "react-dom": "^15.0.0",
+    "react": "15.4.2",
+    "react-addons-test-utils": "15.4.2",
+    "react-dom": "15.4.2",
     "react-tap-event-plugin": "^2.0.1",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
